--- a/home.html
+++ b/home.html
@@ -38,6 +38,6 @@
         <h2 class="result" id="Group3">3</h2>
     </div>
     <button id="social" ><a href="https://wa.me/+923426084562">WHATSAPP</a></button>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
